# archup

./: LICENSE  README.md  pyproject.toml
archup/: cli.py  datamodel.py  markdown.py  project.py  schema.py
archup/template/: archup.conf  archup.conf.tmpl  docker-compose.yaml
archup/template/docs/landscape/: 01-overview.md
archup/template/src/: datamodel.yaml  workspace.dsl  workspace.dsl.tmpl
