[project]
name = "archup"
dynamic = ["version"]
dependencies = [
    "click",
    "Jinja2",
    "pyyaml",
    "requests",
    "schema"]
requires-python = ">3.9"

[project.scripts]
archup = "archup.cli:main"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]